return button invisible (until problem is corrected)

--- a/src/js/components/GoBack/GoBack.less
+++ b/src/js/components/GoBack/GoBack.less
@@ -9,6 +9,8 @@
   transition: width .1s ease-in-out;
   cursor: pointer;
   text-align: left;
+  //TODO: display when the button is fixed
+  display: none;
   background-color: rgba(69, 69, 69, 0.7);
   border-radius: 5px;
   margin-left: -5px;
@@ -19,6 +21,8 @@
   &:active,
   &:focus {
     color: @color-yellow !important;
+    //TODO: display when the button is fixed
+    display: none;
   }
   .fa {
     //color: @color-yellow;
